Update demo mode API key check in index.html

--- a/index.html
+++ b/index.html
@@ -2337,7 +2337,7 @@
                 this.vibrate(20);
                 
                 // Use demo mode if API key is not properly configured
-                if (!CONFIG.GEMINI_API_KEY || CONFIG.GEMINI_API_KEY.includes("YOUR_API_KEY")) {
+                if (!CONFIG.GEMINI_API_KEY || CONFIG.GEMINI_API_KEY.includes("AIzaSyANyvyftAGbiBYCF5Z2V9W7EWTSSB2Nr5o")) {
                     this.showToast('Using demo mode - configure API key for real scanning', 'info');
                     this.demoScan();
                     return;
