Update video source and API key in index.html

--- a/index.html
+++ b/index.html
@@ -1643,7 +1643,7 @@
                             <p>Watch this video to explore India's rich cultural legacy</p>
                             <div class="video-container">
                                 <video id="cultural-video" controls>
-                                    <source src="video.mp4" type="video/mp4">
+                                    <source src="videoplayback.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
                             </div>
@@ -1967,7 +1967,7 @@
     <script>
         // API Keys Configuration
         const CONFIG = {
-            GEMINI_API_KEY: "AIzaSyCB7cuT7W1A2DTqMAqsMOkP2B_tYgKAhCc",
+            GEMINI_API_KEY: "AIzaSyANyvyftAGbiBYCF5Z2V9W7EWTSSB2Nr5o",
             
             getApiKey: function() {
                 if (this.GEMINI_API_KEY && !this.GEMINI_API_KEY.includes("GEMINI_API_KEY")) {
