--- a/index.html
+++ b/index.html
@@ -2167,7 +2167,7 @@
                 try {
                     const base64Data = imageData.split(',')[1];
                     
-                    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent?key=${apiKey}`, {
+                    const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent?key=${CONFIG.GEMINI_API_KEY}`, {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
